fix(common): AmounFilter's input cursor is visible now

--- a/src/components/common/AmountFilter/AmountFilter.scss
+++ b/src/components/common/AmountFilter/AmountFilter.scss
@@ -12,7 +12,6 @@
     width: 100%;
     height: 36px;
     border: 1px solid $input-border-color;
-    color: transparent;
     text-shadow: 0 0 0 $label-color;
     font-size: 13px;
     border-radius: 2px;
@@ -26,8 +25,9 @@
     position: absolute;
     display: flex;
     align-items: center;
+    text-align: end;
     top: 0;
-    left: 0;
+    right: 0;
     width: 100%;
     height: 100%;
     padding: 0 2px;
